--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -122,10 +122,12 @@
               </div>
               <div class="payment">
                 <ul>
-                  <li><a href="#"><img title="Visa" alt="Visa" src="./../assets/images/visa.png"></a></li>
-                  <li><a href="#"><img title="Paypal" alt="Paypal" src="./../assets/images/paypal.png"></a></li>
-                  <li><a href="#"><img title="Discover" alt="Discover" src="./../assets/images/discover.png"></a></li>
-                  <li><a href="#"><img title="Master Card" alt="Master Card" src="./../assets/images/master-card.png"></a></li>
+                  <li><a href="#"><img title="tien-mat" alt="tien-matt" src="./../../assets/images/tien-mat.jpg"></a></li>
+                  <li><a href="#"><img title="banking" alt="banking" src="./../../assets/images/internet-bank.jpg"></a></li>
+                  <li><a href="#"><img title="Master Card" alt="Master Card" src="./../../assets/images/mastercard.jpg"></a></li>
+                  
+                  <li><a href="#"><img title="Master Card" alt="Visa" src="./../../assets/images/visa.jpg"></a></li>
+                  <li><a href="#"><img title="bo cong thuong" alt="Bộ Công Thương" src="./../../assets/images/bo-cong-thuong.jpg"></a></li>
                 </ul>
               </div>
             </div>
