--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -25,3 +25,30 @@
     width: 0px !important; 
     margin-right: 0px !important;
 }
+
+
+.status.status1 {
+    color: #27ae60;
+    padding-right: 3px;
+}
+.status_stock {
+    font-weight: 600;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.status_stock .status i {
+    font-size: 12px;
+    margin-right: 9px;
+}
+
+.invalid-feedback{
+ color: red;
+}
+
+.background-review{
+    background: seashell;
+}
