--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -81,8 +81,8 @@
 body {
 	background: #fff;
 	color: #333333;
-	font-family: 'Arial', sans-serif;
-	font-size: 13px;
+	font-family: Chakra Petch;
+	font-size: 16px;
 	font-weight: 600;
 	line-height: 1.5;
 	text-align: left;
