--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -118,8 +118,8 @@
                       </ul>
                       <div class="top-subtotal">Tổng tiền: <span class="price">{{sumPriceItemsInCart() | currency : "VND"}}</span></div>
                       <div class="actions">
-                        <button class="btn-checkout" type="button" [routerLink]="['/thanh-toan']"><i class="fa fa-check"></i><span>Thanh toán</span></button>
-                        <button class="view-cart" type="button" [routerLink]="['/gio-hang']"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span></button>
+                        <!-- <button class="btn-checkout" type="button" [routerLink]="['/thanh-toan']"><i class="fa fa-check"></i><span></span></button> -->
+                        <button class="view-cart" type="button" [routerLink]="['/gio-hang']"><i class="fa fa-shopping-cart"></i><span>Xác nhận đơn hàng</span></button>
                       </div>
                     </div>
                   </div>
