--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -128,14 +128,8 @@
   <!-- All products-->
   <div class="container">
     <div class="home-tab">
-      <div class="tab-title text-left">
-        <h2>SẢN PHẨM BÁN CHẠY</h2>
-        <!-- <ul class="nav home-nav-tabs home-product-tabs">
-          <li class="active"><a href="#computer" data-toggle="tab" aria-expanded="false">Computer</a></li>
-          <li><a href="#smartphone" data-toggle="tab" aria-expanded="false">Smartphone</a></li>
-          <li><a href="#watches" data-toggle="tab" aria-expanded="false">Watches</a></li>
-          <li><a href="#photo" data-toggle="tab" aria-expanded="false">Photo & Camera</a></li>
-        </ul> -->
+      <div class="block__header">
+        <h2 class="block__header__title">SẢN PHẨM BÁN CHẠY</h2>
       </div>
       <div id="productTabContent" class="tab-content">
         <div class="tab-pane active in" id="computer">
@@ -216,8 +210,8 @@
   </div>
   <div class="container newproduct">
     <div class="home-tab">
-      <div class="tab-title text-left">
-        <h2>SẢN PHẨM MỚI</h2>
+      <div class="block__header">
+        <h2 class="block__header__title">SẢN PHẨM MỚI</h2>
         <!-- <ul class="nav home-nav-tabs home-product-tabs">
           <li class="active"><a href="#computer" data-toggle="tab" aria-expanded="false">Computer</a></li>
           <li><a href="#smartphone" data-toggle="tab" aria-expanded="false">Smartphone</a></li>
@@ -316,8 +310,8 @@
   </div> -->
   <div class="container newproduct">
     <div class="home-tab">
-      <div class="tab-title text-left">
-        <h2>SẢN PHẨM NỔI BẬT</h2>
+      <div class="block__header">
+        <h2 class="block__header__title">SẢN PHẨM NỔI BẬT</h2>
       </div>
       <div id="productTabContent" class="tab-content">
         <div class="tab-pane active in" id="computer">
@@ -398,8 +392,8 @@
   </div>
   <div class="container newproduct">
     <div class="home-tab">
-    <div class="tab-title text-left">
-      <h2>DANH MỤC SẢN PHẨM</h2>
+    <div class="block__header">
+      <h2 class="block__header__title">DANH MỤC SẢN PHẨM</h2>
     </div>
    </div>
     <div class="row" *ngIf="this.allMenu &&this.allMenu != '' ">
@@ -419,8 +413,8 @@
   </div>
   <div class="container">
     <div class="home-tab">
-    <div class="tab-title text-left">
-      <h2>THƯƠNG HIỆU</h2>
+    <div class="block__header">
+      <h2 class="block__header__title">THƯƠNG HIỆU</h2>
     </div>
    </div>
     <div class="row">
@@ -443,11 +437,11 @@
       </div>
     </div>
   </div>
-
+<!-- 
   <div class="container">
     <div class="home-tab">
-    <div class="tab-title text-left">
-      <h2>SẢN PHẨM VỪA XEM</h2>
+    <div class="block__header">
+      <h2 class="block__header__title">SẢN PHẨM VỪA XEM</h2>
     </div>
    </div>
    <div id="productTabContent" class="tab-content">
@@ -461,7 +455,7 @@
       </div>
     </div>
   </div>
-  </div>
+  </div> -->
 
  
 </ng-container>
