--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -3,62 +3,186 @@
     <div class="main container">
       <div class="col-main">
         <div class="cart">
-          
-          <div class="page-content page-order"><div class="page-title">
+          <div class="cart-products inline">
             <div class="cart-process">
               <div class="process active"><span>1. Chọn sản phẩm</span></div>
               <div class="process active"><span>2. Xác nhận đơn hàng</span></div>
               <div class="process"><span>3. Thanh toán</span></div>
             </div>
-            <div class="title">THÔNG TIN SẢN PHẨM</div>
-          </div>
-            <div class="order-detail-content">
-              <div class="table-responsive">
-                <table class="table table-bordered cart_summary">
-                  <thead>
-                    <tr class="text-center">
-                      <th class="cart_product">Sản phẩm</th>
-                      <th>Mô tả</th>
-                      <th>Tình trạng</th>
-                      <th>Giá</th>
-                      <th>Số lượng</th>
-                      <th>Thành tiền</th>
-                      <th  class="action"><i class="fa fa-trash-o"></i></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let item of getItemCart()">
-                      <td class="cart_product"><a (click)="handleViewDetailProduct($event,item)"><img [src]="urlImg + item.image" alt="Product"></a></td>
-                      <td class="cart_description"><p class="product-name"><a (click)="handleViewDetailProduct($event,item)">{{item.productName}}</a></p>
-                        <!-- <small><a href="#">Color : Red</a></small>
-                        <small><a href="#">Size : M</a></small></td> -->
-                      <td class="availability in-stock"><span class="label">In stock</span></td>
-                      <td class="price" style="color: red;"><span>{{item.price | currency:"VND"}}</span></td>
-                      <td class="qty"><input class="form-control input-sm" type="text" value="{{item.quantity}}"></td>
-                      <td class="price" style="color: red;"><span>{{item.price * item.quantity | currency:"VND"}}</span></td>
-                      <td class="action"><a (click)="removeItemCart(item.id)"><i class="icon-close"></i></a></td>
-                    </tr>                  
-                  </tbody>
-                  <tfoot>
-                    <tr>
-                      <td colspan="2" rowspan="2"></td>
-                      <td colspan="3">Tổng sản phẩm</td>
-                      <td colspan="2">{{sumItemsInCart()}}</td>
-                    </tr>
-                    <tr>
-                      <td colspan="3"><strong>Tổng tiền</strong></td>
-                      <td colspan="2"><strong>{{sumPriceItemsInCart() | currency:"VND"}}</strong></td>
-                    </tr>
-                  </tfoot>
-                </table>
+            <div class="cart-header">
+              <div class="title2">THÔNG TIN SẢN PHẨM</div>
+             <!-- <div class="actions">
+                <a href="https://www.tncstore.vn/index.php?route=checkout/download/export">
+                 <svg width="16"
+                    height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M1.25 9.5C1.66421 9.5 2 9.83579 2 10.25V13.25C2 13.4489 2.07902 13.6397 2.21967 13.7803C2.36032 13.921 2.55109 14 2.75 14H13.25C13.4489 14 13.6397 13.921 13.7803 13.7803C13.921 13.6397 14 13.4489 14 13.25V10.25C14 9.83579 14.3358 9.5 14.75 9.5C15.1642 9.5 15.5 9.83579 15.5 10.25V13.25C15.5 13.8467 15.2629 14.419 14.841 14.841C14.419 15.2629 13.8467 15.5 13.25 15.5H2.75C2.15326 15.5 1.58097 15.2629 1.15901 14.841C0.737053 14.419 0.5 13.8467 0.5 13.25V10.25C0.5 9.83579 0.835786 9.5 1.25 9.5Z"
+                      fill="#005EC4"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M3.71967 5.96967C4.01256 5.67678 4.48744 5.67678 4.78033 5.96967L8 9.18934L11.2197 5.96967C11.5126 5.67678 11.9874 5.67678 12.2803 5.96967C12.5732 6.26256 12.5732 6.73744 12.2803 7.03033L8.53033 10.7803C8.23744 11.0732 7.76256 11.0732 7.46967 10.7803L3.71967 7.03033C3.42678 6.73744 3.42678 6.26256 3.71967 5.96967Z"
+                      fill="#005EC4"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M8 0.5C8.41421 0.5 8.75 0.835786 8.75 1.25V10.25C8.75 10.6642 8.41421 11 8 11C7.58579 11 7.25 10.6642 7.25 10.25V1.25C7.25 0.835786 7.58579 0.5 8 0.5Z"
+                      fill="#005EC4"></path>
+                  </svg>
+                  Tải báo giá
+                </a> <a href="https://www.tncstore.vn/index.php?route=checkout/print"><svg width="18" height="18"
+                    viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M3.75 1.5C3.75 1.08579 4.08579 0.75 4.5 0.75H13.5C13.9142 0.75 14.25 1.08579 14.25 1.5V6.75C14.25 7.16421 13.9142 7.5 13.5 7.5C13.0858 7.5 12.75 7.16421 12.75 6.75V2.25H5.25V6.75C5.25 7.16421 4.91421 7.5 4.5 7.5C4.08579 7.5 3.75 7.16421 3.75 6.75V1.5Z"
+                      fill="#005EC4"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M3 7.5C2.80109 7.5 2.61032 7.57902 2.46967 7.71967C2.32902 7.86032 2.25 8.05109 2.25 8.25V12C2.25 12.1989 2.32902 12.3897 2.46967 12.5303C2.61032 12.671 2.80109 12.75 3 12.75H4.5C4.91421 12.75 5.25 13.0858 5.25 13.5C5.25 13.9142 4.91421 14.25 4.5 14.25H3C2.40326 14.25 1.83097 14.0129 1.40901 13.591C0.987053 13.169 0.75 12.5967 0.75 12V8.25C0.75 7.65326 0.987053 7.08097 1.40901 6.65901C1.83097 6.23705 2.40326 6 3 6H15C15.5967 6 16.169 6.23705 16.591 6.65901C17.0129 7.08097 17.25 7.65326 17.25 8.25V12C17.25 12.5967 17.0129 13.169 16.591 13.591C16.169 14.0129 15.5967 14.25 15 14.25H13.5C13.0858 14.25 12.75 13.9142 12.75 13.5C12.75 13.0858 13.0858 12.75 13.5 12.75H15C15.1989 12.75 15.3897 12.671 15.5303 12.5303C15.671 12.3897 15.75 12.1989 15.75 12V8.25C15.75 8.05109 15.671 7.86032 15.5303 7.71967C15.3897 7.57902 15.1989 7.5 15 7.5H3Z"
+                      fill="#005EC4"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M3.75 10.5C3.75 10.0858 4.08579 9.75 4.5 9.75H13.5C13.9142 9.75 14.25 10.0858 14.25 10.5V16.5C14.25 16.9142 13.9142 17.25 13.5 17.25H4.5C4.08579 17.25 3.75 16.9142 3.75 16.5V10.5ZM5.25 11.25V15.75H12.75V11.25H5.25Z"
+                      fill="#005EC4"></path>
+                  </svg>
+                  In báo giá
+                </a>
+              </div> -->
+            </div> <!----><!---->
+            <div *ngIf="getItemCart().length == 0">Bạn đang không có sản phẩm nào trong giỏ hàng.</div>
+            <div class="cart-p-item" *ngFor="let item of getItemCart()">
+              <div class="cart-p-img"><img
+                  [src]='urlImg + item.image'
+                  alt="{{item.productName}}"></div>
+              <div class="cart-p-content"><a [routerLink]="['/chi-tiet']"  [queryParams]="{slug: item.productNameSlug}"
+              routerLinkActive="router-link-active"
+                  target="_blank" class="cart-p-name">{{item.productName}}</a>
+                <div class="cart-p-meta">
+                  <div class="cart-p-desc">
+                    <div class="collapse2">
+                      <div class="collapse-header" (click)="showDetailProduct($event,  item.id)"><i id="{{'detail' + item.id}}" class="fa fa-angle-right"></i> Chi tiết sản phẩm <!----></div>
+                      <div id="{{'detailItem' + item.id}}" class="collapse-body" style="display: none;">
+                        <div class="short-desc" [innerHTML]="decodeURIComponent(item.content)" >
+                          
+                          <!-- <p> - Dung lượng: 1TB</p>
+                          <p> - Tốc độ vòng quay: 7200rpm</p>
+                          <p> - Bộ nhớ đệm: 64MB Cache</p>
+                          <p> - Kích thước: 3.5”</p>
+                          <p> - Chuẩn kết nối: SATA 3</p>    -->
+                        </div>
+                      </div>
+                    </div> <!---->
+                  </div>
+                  <div class="cart-p-price">{{item.quantity * item.price | currency : "VND"}}</div>
+                </div>
+                <div class="cart-p-actions">
+                  Số lượng
+                  <div class="cart-p-qty">
+                    <!-- (click)="decreaseQuantity()" -->
+                    <span class="qty-decrease" (click)="addQuantityToShopingCard(item.id, -1)">-</span>
+                    <input type="tel" class="qty-input" value="{{item.quantity}}">
+                    <span class="qty-increase" (click)="addQuantityToShopingCard(item.id, 1)">+</span>
+                  </div>
+                  <div class="cart-p-remove" (click)="removeItemCart(item.id)">
+                    <svg width="14" height="16" viewBox="0 0 18 20" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1.5 5H3.16667H16.5" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round"></path>
+                      <path
+                        d="M5.66602 4.99984V3.33317C5.66602 2.89114 5.84161 2.46722 6.15417 2.15466C6.46673 1.8421 6.89066 1.6665 7.33268 1.6665H10.666C11.108 1.6665 11.532 1.8421 11.8445 2.15466C12.1571 2.46722 12.3327 2.89114 12.3327 3.33317V4.99984M14.8327 4.99984V16.6665C14.8327 17.1085 14.6571 17.5325 14.3445 17.845C14.032 18.1576 13.608 18.3332 13.166 18.3332H4.83268C4.39065 18.3332 3.96673 18.1576 3.65417 17.845C3.34161 17.5325 3.16602 17.1085 3.16602 16.6665V4.99984H14.8327Z"
+                        stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M7.33398 9.1665V14.1665" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round"></path>
+                      <path d="M10.666 9.1665V14.1665" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round"></path>
+                    </svg>
+                    XOÁ
+                  </div>
+                </div>
               </div>
-              <div class="cart_navigation"> <a class="continue-btn" routerLink="/"><i class="fa fa-arrow-left"> </i>&nbsp; Tiếp tục mua hàng</a>
-                 <a class="checkout-btn" [routerLink]="['/thanh-toan']" routerLinkActive="router-link-active"><i class="fa fa-check"></i> Xác nhận đơn hàng</a>
-               </div>
+            </div>
+           
+          </div>
+          <div class="cart-total-prices">
+            <div class="cart-prices">
+              <div class="title2">THÔNG TIN GIỎ HÀNG</div>
+              <div>Số lượng sản phẩm <span class="p-count">{{sumItemsInCart()}}</span></div>
+              <div>Tổng chi phí <span class="price">{{ sumPriceItemsInCart() | currency : "VND"}}</span></div>
+              <div style="font-size: 14px; color: rgb(78, 78, 84); font-weight: normal; justify-content: flex-end;">Đã bao gồm
+                VAT (nếu có)</div>
+                 <a [ngClass]="getItemCart().length == 0 ? 'go-checkout disable': 'go-checkout' " [routerLink]="['/thanh-toan']" routerLinkActive="router-link-active" >Xác nhận đơn hàng</a> 
+                <a (click)="clearItemCart()"
+                style="background: rgb(237, 27, 36); border-color: rgb(237, 27, 36); color: rgb(255, 255, 255);">Xóa giỏ
+                hàng</a> <a [routerLink]="['/']" routerLinkActive="router-link-active" >XEM SẢN PHẨM KHÁC</a>
+            </div>
+            <div class="cart-info">
+              <div class="info">
+                <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
+                      fill="#27AE60"></path>
+                    <path
+                      d="M7.74909 10.7374L6.01159 8.99993L5.41992 9.58743L7.74909 11.9166L12.7491 6.9166L12.1616 6.3291L7.74909 10.7374Z"
+                      fill="white" stroke="white"></path>
+                  </svg>Hỗ trợ trả góp 0%, trả trước 0đ
+                </div>
+                <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
+                      fill="#27AE60"></path>
+                    <path
+                      d="M7.74909 10.7374L6.01159 8.99993L5.41992 9.58743L7.74909 11.9166L12.7491 6.9166L12.1616 6.3291L7.74909 10.7374Z"
+                      fill="white" stroke="white"></path>
+                  </svg>Hoàn tiền 200% khi phát hiện hàng giả
+                </div>
+                <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
+                      fill="#27AE60"></path>
+                    <path
+                      d="M7.74909 10.7374L6.01159 8.99993L5.41992 9.58743L7.74909 11.9166L12.7491 6.9166L12.1616 6.3291L7.74909 10.7374Z"
+                      fill="white" stroke="white"></path>
+                  </svg>Giao hàng nhanh 3H nội thành Tây Ninh
+                </div>
+                <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
+                      fill="#27AE60"></path>
+                    <path
+                      d="M7.74909 10.7374L6.01159 8.99993L5.41992 9.58743L7.74909 11.9166L12.7491 6.9166L12.1616 6.3291L7.74909 10.7374Z"
+                      fill="white" stroke="white"></path>
+                  </svg>Giao hàng từ 5 - 7 ngày toàn quốc
+                </div>
+                <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
+                      fill="#27AE60"></path>
+                    <path
+                      d="M7.74909 10.7374L6.01159 8.99993L5.41992 9.58743L7.74909 11.9166L12.7491 6.9166L12.1616 6.3291L7.74909 10.7374Z"
+                      fill="white" stroke="white"></path>
+                  </svg>Đội ngũ kĩ thuật hỗ trợ online 7/7
+                </div>
+              </div>
+              <div class="bank"><a href=""><img src="../../assets/images/tien-mat.jpg" alt=""></a> <a
+                  href=""><img src="../../assets/images/internet-bank.jpg" alt=""></a> <a href=""><img
+                    src="../../assets/images/master-card.png" alt=""></a> <a href=""><img
+                    src="../../assets/images/visa.jpg" alt=""></a></div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    
+  <div class="container">
+    <div class="home-tab">
+    <div class="block__header">
+      <h2 class="block__header__title">SẢN PHẨM VỪA XEM</h2>
+    </div>
+   </div>
+   <div id="productTabContent" class="tab-content">
+    <div class="tab-pane active in" id="computer">
+      <div class="featured-pro">
+        <div class="slider-items-products">
+          <div  class="product-flexslider hidden-buttons">
+            <app-product-recent></app-product-recent>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
   </section>
     <!-- service section -->
